--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@ var _hmt = _hmt || [];
 		<img src="img/SCIS-2022.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="" target="_blank">Rethinking Attribute Localization for Zero-Shot Learning.</a>
-<!-- 		 <strong>
+		 <strong>
 		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>]
 		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
 		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
-		 </strong> -->
+		 </strong>
 		<br>
 		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-Sen Xie,  Xiangbo Shu, Xinge You, Xuelong Li.</p>
 	 <p style="margin-top: -11px"> <i>Science China Information Sciences (<strong> SCIS </strong>), in press, 2023. <strong>
