--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
-<!--       <li><span style="color:Red">2023.11</span>, one paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li> -->
+      <li><span style="color:Red">2024.01</span>, Our paper on Non-Transferable Representation Learning is accepted to <strong><i>ICLR'23 Spotlight</i></strong>.</li>
+      <li><span style="color:Red">2023.12</span>, Our paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li>
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
       <li><span style="color:Red">2023.10</span>, I organize a <strong>VALSE Webinar</strong> on <a href="https://mp.weixin.qq.com/s/HzrGKmq4jXam7DCFNIMMFg"> "Zero-shot Learning in Vision"</a>. 
 	      Thanks for the exciting sharing of <strong><a href="https://faculty.uestc.edu.cn/jjl">Prof. Jingjing Li</a></strong>,
@@ -118,10 +119,10 @@ var _hmt = _hmt || [];
       </li>
       <li><span style="color:Red">2023.09</span>, I give a talk in ZHEJIANG LAB, invited by <strong>Dr. Jin Zhao</strong>.</li>
       <li><span style="color:Red">2023.08</span>, one paper on zero-shot learning is accepted to <strong><i>TEC</i></strong>.</li>
-      <li><span style="color:Red">2023.07</span>, one co-author paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
+      <li><span style="color:Red">2023.07</span>, Our paper on rainy image generation is accepted to <strong><i>ICCV'23</i></strong>.</li>
       <li><span style="color:Red">2023.07</span>, I am invited as an <strong><i>Area Chair (AC)</i></strong> of PRCV'23.</li>
       <li><span style="color:Red">2023.06</span>, I give a talk in University of Science and Technology of China, invited by <strong><a href="http://imcc.ustc.edu.cn/_upload/tpl/0d/13/3347/template3347/xiehongtao.html">Prof. Hongtao Xie</a></strong>.</li>
-      <li><span style="color:Red">2023.04</span>, one paper on zero-shot learning is accepted to <strong><i>ICML'23</i></strong>.</li>
+      <li><span style="color:Red">2023.04</span>, Our paper on zero-shot learning is accepted to <strong><i>ICML'23</i></strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Alibaba DAMO Academic, invited by <strong>Baigui Sun</strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Huazhong Agricultural Univeristy, invited by <strong><a href="https://chenhongml.github.io/">Prof. Hong Chen</a></strong>.</li>
       <li><span style="color:Red">2023.04</span>, I give a talk in Guizhou University, invited by <strong><a href="https://scholar.google.com/citations?hl=en&user=7879e5QAAAAJ">Prof. Yisong Wang</a></strong>.</li>
@@ -131,22 +132,22 @@ var _hmt = _hmt || [];
       <li><span style="color:Red">2022.08</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
       <li><span style="color:Red">2022.05</span>, I give a talk about our CVPR'22 work (MSDN) in VALSE.</li>
       <li><span style="color:Red">2022.05</span>, I give a talk about zero-shot learning in AI TIME and AI Drive.</li>
-      <li><span style="color:Red">2022.04</span>, one paper on zero-shot learning is accepted to <strong><i>IJCAI'22</i></strong>.</li>
+      <li><span style="color:Red">2022.04</span>, Our paper on zero-shot learning is accepted to <strong><i>IJCAI'22</i></strong>.</li>
       <li><span style="color:Red">2022.04</span>, We have released the full codes of <strong><a href="https://arxiv.org/pdf/2112.01683.pdf">TransZero</a></strong> accepted to AAAI'22.</li>
-      <li><span style="color:Red">2022.03</span>, one paper on zero-shot learning is accepted to <strong><i>CVPR'22</i></strong>.</li>
+      <li><span style="color:Red">2022.03</span>, Our paper on zero-shot learning is accepted to <strong><i>CVPR'22</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in Extreme Mart (极市).</li>
-      <li><span style="color:Red">2022.02</span>, one paper on zero-shot learning is accepted to <strong><i>TNNLS</i></strong>.</li>
+      <li><span style="color:Red">2022.02</span>, Our paper on zero-shot learning is accepted to <strong><i>TNNLS</i></strong>.</li>
       <li><span style="color:Red">2022.02</span>, I gave a talk in AI TIME PhD-NeurIPS, invite by AI TIME.</li>
       <li><span style="color:Red">2022.01</span>, I start a Research Intern at <strong>Tencent AI Lab</strong>.</li>
-      <li><span style="color:Red">2021.12</span>, one paper on zero-shot learning is accepted to <strong><i>AAAI'22</i></strong>.</li>
-      <li><span style="color:Red">2021.09</span>, one paper on zero-shot learning is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
-      <li><span style="color:Red">2021.07</span>, one paper on zero-shot learning is accepted to <strong><i>ICCV'21</i></strong>.</li>
+      <li><span style="color:Red">2021.12</span>, Our paper on zero-shot learning is accepted to <strong><i>AAAI'22</i></strong>.</li>
+      <li><span style="color:Red">2021.09</span>, Our paper on zero-shot learning is accepted to <strong><i>NeurIPS'21</i></strong>.</li>
+      <li><span style="color:Red">2021.07</span>, Our paper on zero-shot learning is accepted to <strong><i>ICCV'21</i></strong>.</li>
       <!--<li ><span style="color:Red">2021.05</span>, I start a Research Intern at <strong>Alibaba DAMO Academy</strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2021.04.29</span>, one co-authored paper is accepted to <strong><i>IJCAI'21</i></strong>.</li>
-      <li><span style="color:Red">2021.02</span>, one paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEC)</i></strong>.</li>
+      <li><span style="color:Red">2021.02</span>, Our paper is accepted to <strong><i>IEEE Transactions on Evolutionary Computation (TEC)</i></strong>.</li>
       <li><span style="color:Red">2019.09</span>, I start my Ph.D study in EIC at <strong>HUST</strong>.</li>
-      <li><span style="color:Red">2019.01</span>, one paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
-      <li><span style="color:Red">2018.10</span>, one paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
+      <li><span style="color:Red">2019.01</span>, Our paper is accepted to <strong><i>Information Sciences (INS)</i></strong>.</li>
+      <li><span style="color:Red">2018.10</span>, Our paper is accepted to <strong><i>ACTA AUTOMATICA SINICA</i></strong>. </li> -->
       </ul>
     </div>
      
