--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
-      <li><span style="color:Red">2024.01</span>, Our paper on Non-Transferable Representation Learning is accepted to <strong><i>ICLR'23 Spotlight</i></strong>.</li>
-      <li><span style="color:Red">2023.12</span>, Our paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>.</li>
+      <li><span style="color:Red">2024.01</span>, Our paper on Non-Transferable Representation Learning is accepted to <strong><i>ICLR'23 Spotlight</i></strong>, congrating to Ziming</li>
+      <li><span style="color:Red">2023.12</span>, Our paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>, congrating to Shuhuang.</li>
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
       <li><span style="color:Red">2023.10</span>, I organize a <strong>VALSE Webinar</strong> on <a href="https://mp.weixin.qq.com/s/HzrGKmq4jXam7DCFNIMMFg"> "Zero-shot Learning in Vision"</a>. 
 	      Thanks for the exciting sharing of <strong><a href="https://faculty.uestc.edu.cn/jjl">Prof. Jingjing Li</a></strong>,
