--- a/index.html
+++ b/index.html
@@ -239,6 +239,36 @@ var _hmt = _hmt || [];
 <tr>
 	
 		<td width="206">
+		<img src="img/cvpr24-zslvit.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Progressive Semantic-Guided Vision Transformer for  Zero-Shot Learning.</a>
+<!-- 			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
+				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>] -->
+		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Salman Khan, Fahad Khan.</p>
+       <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+
+<tr>
+	
+		<td width="206">
+		<img src="img/cvpr24-vads.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Visual-Augmented Dynamic Semantic Prototype for Generative Zero-Shot Learning.</a>
+<!-- 			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
+				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>] -->
+		 <p >Wenjin Hou, <strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Ziming Hong, Yan Wang, Xuetao Feng, Salman Khan, Fahad Khan, Xinge You.</p>
+       <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	
+<tr>
+	
+		<td width="206">
 		<img src="img/ICML23-DSP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://proceedings.mlr.press/v202/chen23l.html" target="_blank"> Evolving Semantic Prototype Improves Generative Zero-Shot Learning.</a>
