--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank"> Progressive Semantic-Guided Vision Transformer for  Zero-Shot Learning.</a>
 <!-- 			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
 				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>] -->
-		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Salman Khan, Fahad Khan.</p>
+		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Salman Khan, Fahad Shahbaz Khan.</p>
        <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
@@ -259,7 +259,7 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank"> Visual-Augmented Dynamic Semantic Prototype for Generative Zero-Shot Learning.</a>
 <!-- 			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
 				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>] -->
-		 <p >Wenjin Hou, <strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Ziming Hong, Yan Wang, Xuetao Feng, Salman Khan, Fahad Khan, Xinge You.</p>
+		 <p >Wenjin Hou, <strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Ziming Hong, Yan Wang, Xuetao Feng, Salman Khan, Fahad Shahbaz Khan, Xinge You.</p>
        <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
