--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ var _hmt = _hmt || [];
       <div style="height: 320px; overflow: auto;">
       <ul>
       <li><span style="color:Red">2024.02</span>, Our TWO paper on zero-shot learning are accepted to <strong><i>CVPR'24</i></strong>.</li>
+      <li><span style="color:Red">2024.02</span>, Our SURVEY paper on few-shot object detection is accepted to <strong><i>Information Fusion</i></strong>.</li>
       <li><span style="color:Red">2024.01</span>, Our paper on Non-Transferable Representation Learning is accepted to <strong><i>ICLR'24</i></strong> (<span style="color:Red"><strong>Spotlight</strong></span>), congrating to Ziming.</li>
       <li><span style="color:Red">2023.12</span>, Our paper on zero-shot learning is accepted to <strong><i>Science China Information Sciences</i></strong>, congrating to Shuhuang.</li>
       <li><span style="color:Red">2023.11</span>, I give a talk in Harbin Institute of Technology (Shenzhen), invited by <strong><a href="https://www.dl2link.com/">Prof. Haijun Zhang</a></strong>.</li>
