--- a/index.html
+++ b/index.html
@@ -281,23 +281,7 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
 	<tr></tr>	
-
-
-<tr>
 	
-		<td width="206">
-		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a>
-			<strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]
-				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
-				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
-		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
-       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021: 16622-16634. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>	
 
 
 <tr>
@@ -315,6 +299,22 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
     <tr></tr>	
+
+<tr>
+	
+		<td width="206">
+		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a>
+			<strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
+		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
+       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021: 16622-16634. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
 	
 <tr>
 	
@@ -539,8 +539,8 @@ var _hmt = _hmt || [];
 	  
     <h2><strong>Awards</strong></h2>
    <div>
-	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong> China National Scholarship</strong>.</li>
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
+	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong> China National Scholarship</strong>.</li>
     </div>  
    
     <h2>Work Experience</h2>
@@ -578,7 +578,7 @@ var _hmt = _hmt || [];
 	TPAMI, IJCV, TIP, TNNLS, TEC, TCYB, TSMCA, TITS, TII, TMM, TASE, TIV, etc.<br>
 	
 	<strong>Conference PC/Reviewers:</strong> 
-	ICLR'23-24, NeurIPS'23, IJCAI'21-23,  CVPR'22-23, ICCV'21-23, ECCV'22, ACM MM'21, AAAI'22-23.
+	ICLR'23-24, NeurIPS'23, CVPR'22-24, ICCV'21-23, ECCV'22-24, AAAI'22-24,  IJCAI'21-23, ACM MM'21.
     </div>
 	
 	 
