--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@ var _hmt = _hmt || [];
 		<img src="img/cvpr24-zslvit.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> Progressive Semantic-Guided Vision Transformer for  Zero-Shot Learning.</a>
-<!-- 			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
-				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>] -->
+			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong>
 		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Salman Khan, Fahad Shahbaz Khan.</p>
        <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
