--- a/index.html
+++ b/index.html
@@ -236,6 +236,36 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>
 <span>(*:Co-First Author; #:Corresponding Author) </span>
+<h3 style="color: red">Survey Papers </h3>
+
+<tr>
+		<td width="206">
+		<img src="img/2024-TKDE-causality-survey.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank">Emerging Synergies in Causality and Deep Generative Models: A Survey.</a>
+			<strong>[<a href="https://arxiv.org/pdf/2301.12351.pdf">arXiv</a>]</strong>
+		 <p >Guanglin Zhou, Shaoan Xie, Guangyuan Hao, <strong>Shiming Chen</strong>, Biwei Huang, Xiwei Xu, Chen Wang, Liming Zhu, Lina Yao, Kun Zhang.</p>
+       <p style="margin-top: -11px"><i>arXiv preprint arxiv:2301.12351, 2023. <strong>(<span style="color:Burlywood">Major Revision on TKDE</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+
+	
+<tr>
+		<td width="206">
+		<img src="img/FSOD-survey.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://www.sciencedirect.com/science/article/pii/S156625352400085X" target="_blank"> Few-shot object detection: Research advances and challenges.</a>
+			<strong>[<a href="https://www.sciencedirect.com/science/article/pii/S156625352400085X">PDF</a>]
+				[<a href="https://arxiv.org/pdf/2404.04799.pdf">arXiv</a>]</strong>
+		 <p >Zhimeng Xin,<strong>Shiming Chen</strong>, Tianxu Wu, Yuanjie Shao, Weiping Ding, Xinge You.</p>
+       <p style="margin-top: -11px"><i>Information Fusion, 2024. <strong>(<span style="color:Burlywood">SCI, IF=18.6</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	
 <h3 style="color: red">Conference Papers </h3>	
 <tr>
 	
