--- a/index.html
+++ b/index.html
@@ -265,7 +265,11 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
 	<tr></tr>
-	
+</tbody>
+</table>
+
+<table id="tbPublications" width="100%">
+<tbody>	
 <h3 style="color: red">Conference Papers </h3>	
 <tr>
 	
