--- a/index.html
+++ b/index.html
@@ -488,11 +488,11 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/GNDAN.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
+		<td><a href="https://ieeexplore.ieee.org/document/9768177" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
 			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
 				[<a href="">PDF</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-Sen Xie, Xinge You, Weiping Ding and Ling Shao.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), in press, 2022. <strong>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), 35(4):4516-4529, 2024. <strong>
 		 (<span style="color:Burlywood">SCI, IF=14.255, CCF Rank-B</span>)</strong></p>
 	<tr></tr>
     <tr></tr>
