--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank">Emerging Synergies in Causality and Deep Generative Models: A Survey.</a>
 			<strong>[<a href="https://arxiv.org/pdf/2301.12351.pdf">arXiv</a>]</strong>
 		 <p >Guanglin Zhou, Shaoan Xie, Guangyuan Hao, <strong>Shiming Chen</strong>, Biwei Huang, Xiwei Xu, Chen Wang, Liming Zhu, Lina Yao, Kun Zhang.</p>
-       <p style="margin-top: -11px"><i>arXiv preprint arxiv:2301.12351, 2023. <strong>(<span style="color:Burlywood">Major Revision on TKDE</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>arXiv preprint arxiv:2301.12351, 2023. <strong>(<span style="color:Burlywood">Major Revision in TKDE</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
