--- a/index.html
+++ b/index.html
@@ -445,6 +445,25 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
 <tr></tr>
+
+<tr>	
+		<td width="206">
+		<img src="img/2024-TIP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">ECEA: Extensible Co-Existing Attention for Few-Shot Object Detection.</a>
+<!-- 		 <strong>
+		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>]
+		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
+		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
+		 </strong> -->
+		<br>
+		<p >Zhimeng Xin, Tianxu Wu, <strong>Shiming Chen<sup>#</sup></strong>, Yixiong Zou, Ling Shao, Xinge You.</p>
+	 <p style="margin-top: -11px"> <i>IEEE Transactions on Image Processing (<strong> TIP </strong>), in press, 2024. <strong>
+		 (<span style="color:Burlywood">SCI, IF=10.6, CCF Rank-A</span>)</strong></p>
+		</td>
+	</tr>
+	<tr></tr>
+<tr></tr>
 	
 <!-- <tr>	
 		<td width="206">
