--- a/index.html
+++ b/index.html
@@ -189,13 +189,17 @@ var _hmt = _hmt || [];
 		<a href="https://ieeexplore.ieee.org/document/9987664" target="_blank"> IEEE TPAMI'22</a>, 
 	        <a href="https://ieeexplore.ieee.org/document/10225587" target="_blank"> IEEE TEC'23</a>,
 		<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf" target="_blank"> ICML'23</a> 
+		<a href="https://arxiv.org/pdf/2404.14808">CVPR'24</a>
 	       </i>, etc.<br> <br> 
 		   
        <strong>3. Developing the hierarchical semantic-visual adaptation framework for visual-semantic alignment.</strong> 
 	Different to existing one-step adaptation method that on alignment the feature distributions between visual and semantic domains, 
 	this method utilizes a hierarchical adaptation to learn an intrinsic common space for semantic and visual feature representations
-	by adopting sequential structure adaptation and distribution adaptation. The papers of this project have been published in <i>
-		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a></i>.
+	by adopting sequential structure adaptation and distribution adaptation. The papers of this project have been published in 
+	<i>
+		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a>
+		<a href="https://arxiv.org/abs/2404.07713">CVPR'24</a>
+	</i>.
 	</span> <br> <br> 
 	<span></span><br>
 <!-- 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br> -->
