--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ var _hmt = _hmt || [];
 		<a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> AAAI'22</a>, 
 		<a href="https://ieeexplore.ieee.org/document/9987664" target="_blank"> IEEE TPAMI'22</a>, 
 	        <a href="https://ieeexplore.ieee.org/document/10225587" target="_blank"> IEEE TEC'23</a>,
-		<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf" target="_blank"> ICML'23</a> 
+		<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf" target="_blank"> ICML'23</a> ,
 		<a href="https://arxiv.org/pdf/2404.14808">CVPR'24</a>
 	       </i>, etc.<br> <br> 
 		   
@@ -197,7 +197,7 @@ var _hmt = _hmt || [];
 	this method utilizes a hierarchical adaptation to learn an intrinsic common space for semantic and visual feature representations
 	by adopting sequential structure adaptation and distribution adaptation. The papers of this project have been published in 
 	<i>
-		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a>
+		<a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> NeurIPS'21</a>,
 		<a href="https://arxiv.org/abs/2404.07713">CVPR'24</a>
 	</i>.
 	</span> <br> <br> 
