--- a/index.html
+++ b/index.html
@@ -243,18 +243,18 @@ var _hmt = _hmt || [];
 <span>(*:Co-First Author; #:Corresponding Author) </span>
 <h3 style="color: red">Survey Papers </h3>
 
-<tr>
+<!-- <tr>
 		<td width="206">
 		<img src="img/2024-TKDE-causality-survey.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank">Emerging Synergies in Causality and Deep Generative Models: A Survey.</a>
 			<strong>[<a href="https://arxiv.org/pdf/2301.12351.pdf">arXiv</a>]</strong>
 		 <p >Guanglin Zhou, Shaoan Xie, Guangyuan Hao, <strong>Shiming Chen</strong>, Biwei Huang, Xiwei Xu, Chen Wang, Liming Zhu, Lina Yao, Kun Zhang.</p>
-       <p style="margin-top: -11px"><i>arXiv preprint arxiv:2301.12351, 2023. <strong>(<span style="color:Burlywood">Major Revision in TKDE</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>arXiv preprint arxiv:2301.12351, 2023. </i></p>
 		</td>
 	</tr>
 	<tr></tr>
-	<tr></tr>
+	<tr></tr> -->
 
 	
 <tr>
