--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+      <li><span style="color:Red">2024.05</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>ACM MM'24</i></strong>, congrating to Shuhuang and Yunwei.</li>
       <li><span style="color:Red">2024.05</span>, Our paper on few-shot object detection is accepted to <strong><i>TIP</i></strong>, congrating to Zhimeng.</li>
       <li><span style="color:Red">2024.02</span>, Our TWO paper on zero-shot learning are accepted to <strong><i>CVPR'24</i></strong>.</li>
       <li><span style="color:Red">2024.02</span>, Our SURVEY on few-shot object detection is accepted to <strong><i>Information Fusion</i></strong>, congrating to Zhimeng.</li>
@@ -276,6 +277,35 @@ var _hmt = _hmt || [];
 <table id="tbPublications" width="100%">
 <tbody>	
 <h3 style="color: red">Conference Papers </h3>	
+
+<tr>
+	
+		<td width="206">
+		<img src="img/mm24-zsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Causal Visual-semantic Correlation for Zero-shot Learning.</a>
+<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+		 <p >Shuhuang Chen, Dingjie Fu, <strong>Shiming Chen</strong>, Shuo Ye, Wenjin Hou, Xinge You.</p>
+       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+
+<tr>
+	
+		<td width="206">
+		<img src="img/mm24-fsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> FSL-QuickBoost: Minimal-Cost Ensemble for Few-Shot Learning.</a>
+<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+		 <p >Yunwei Bai, Bill Cai, Ying Kiat Tan, Zangwei Zheng, <strong>Shiming Chen</strong>, Tsuhan Chen.</p>
+       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+	
 <tr>
 	
 		<td width="206">
