--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+       <li><span style="color:Red">2024.08</span>, Our paper on domain generalization is accepted to <strong><i>IEEE TMM</i></strong>, congrating to Guanglin.</li>
       <li><span style="color:Red">2024.07</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>ACM MM'24</i></strong>, congrating to Shuhuang and Yunwei.</li>
-      <li><span style="color:Red">2024.05</span>, Our paper on few-shot object detection is accepted to <strong><i>TIP</i></strong>, congrating to Zhimeng.</li>
+      <li><span style="color:Red">2024.05</span>, Our paper on few-shot object detection is accepted to <strong><i>IEEE TIP</i></strong>, congrating to Zhimeng.</li>
       <li><span style="color:Red">2024.02</span>, Our TWO paper on zero-shot learning are accepted to <strong><i>CVPR'24</i></strong>.</li>
       <li><span style="color:Red">2024.02</span>, Our SURVEY on few-shot object detection is accepted to <strong><i>Information Fusion</i></strong>, congrating to Zhimeng.</li>
       <li><span style="color:Red">2024.01</span>, Our paper on Non-Transferable Representation Learning is accepted to <strong><i>ICLR'24</i></strong> (<span style="color:Red"><strong>Spotlight</strong></span>), congrating to Ziming.</li>
