--- a/index.html
+++ b/index.html
@@ -279,33 +279,6 @@ var _hmt = _hmt || [];
 <tbody>	
 <h3 style="color: red">Conference Papers </h3>	
 
-<tr>
-	
-		<td width="206">
-		<img src="img/mm24-zsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="" target="_blank"> Causal Visual-semantic Correlation for Zero-shot Learning.</a>
-<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
-		 <p >Shuhuang Chen, Dingjie Fu, <strong>Shiming Chen</strong>, Shuo Ye, Wenjin Hou, Xinge You.</p>
-       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>
-
-<tr>
-	
-		<td width="206">
-		<img src="img/mm24-fsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td> <a href="" target="_blank"> FSL-QuickBoost: Minimal-Cost Ensemble for Few-Shot Learning.</a>
-<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
-		 <p >Yunwei Bai, Bill Cai, Ying Kiat Tan, Zangwei Zheng, <strong>Shiming Chen</strong>, Tsuhan Chen.</p>
-       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
-		</td>
-	</tr>
-	<tr></tr>
-	<tr></tr>
 	
 <tr>
 	
@@ -436,8 +409,34 @@ var _hmt = _hmt || [];
 	<tr></tr>
     <tr></tr>
     <tr></tr>
+<tr>
+	
+		<td width="206">
+		<img src="img/mm24-zsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> Causal Visual-semantic Correlation for Zero-shot Learning.</a>
+<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+		 <p >Shuhuang Chen, Dingjie Fu, <strong>Shiming Chen</strong>, Shuo Ye, Wenjin Hou, Xinge You.</p>
+       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
 
-
+<tr>
+	
+		<td width="206">
+		<img src="img/mm24-fsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="" target="_blank"> FSL-QuickBoost: Minimal-Cost Ensemble for Few-Shot Learning.</a>
+<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+		 <p >Yunwei Bai, Bill Cai, Ying Kiat Tan, Zangwei Zheng, <strong>Shiming Chen</strong>, Tsuhan Chen.</p>
+       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+		</td>
+	</tr>
+	<tr></tr>
+	<tr></tr>
+ 
 <!--    
 
 		       
@@ -496,25 +495,23 @@ var _hmt = _hmt || [];
 	</tr>
 	<tr></tr>
 <tr></tr>
-	
-<!-- <tr>	
+
+<tr>	
 		<td width="206">
-		<img src="img/SCIS-2022.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
+		<img src="img/2024-SCIS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Rethinking Attribute Localization for Zero-Shot Learning.</a>
-		 <strong>
-		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>]
-		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
-		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
-		 </strong>
-		<br>
-		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-Sen Xie,  Xiangbo Shu, Xinge You, Xuelong Li.</p>
-	 <p style="margin-top: -11px"> <i>Science China Information Sciences (<strong> SCIS </strong>), in press, 2023. <strong>
+		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
+			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
+				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]</strong>
+				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
+			<br>
+		<p >Shuhuang Chen, <strong>Shiming Chen</strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
+	       <p style="margin-top: -11px"><i>SCIENCE CHINA Information Sciences, 67, 172103 (2024). <strong> 
 		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
-		</td>
-	</tr>
 	<tr></tr>
-<tr></tr> -->
+    <tr></tr>
+    <tr></tr>
+
 
 	
 <tr>	
@@ -525,13 +522,11 @@ var _hmt = _hmt || [];
 		<strong>[<a href="https://ieeexplore.ieee.org/document/10225587">PDF</a>]
 		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]</strong>
                  <br>
-		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), in press, 2023. 
+		<p ><strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 28(3):582-596, 2024. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
 		</td>
 	</tr>
-	<tr></tr>
-    <tr></tr>
     <tr></tr>
 
 	
