--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ var _hmt = _hmt || [];
 				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]</strong>
 				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
 			<br>
-		<p >Shuhuang Chen, <strong>Shiming Chen</strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
+		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
 	       <p style="margin-top: -11px"><i>SCIENCE CHINA Information Sciences, 67, 172103 (2024). <strong> 
 		 (<span style="color:Burlywood">SCI, IF=8.8, CCF Rank-A</span>)</strong></p>
 	<tr></tr>
@@ -522,7 +522,7 @@ var _hmt = _hmt || [];
 		<strong>[<a href="https://ieeexplore.ieee.org/document/10225587">PDF</a>]
 		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]</strong>
                  <br>
-		<p ><strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
+		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 28(3):582-596, 2024. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
 		</td>
