--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank"> Causal Visual-semantic Correlation for Zero-shot Learning.</a>
 <!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
 		 <p >Shuhuang Chen, Dingjie Fu, <strong>Shiming Chen</strong>, Shuo Ye, Wenjin Hou, Xinge You.</p>
-       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>ACM International Conference on Multimedia(<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -431,7 +431,7 @@ var _hmt = _hmt || [];
 		<td> <a href="" target="_blank"> FSL-QuickBoost: Minimal-Cost Ensemble for Few-Shot Learning.</a>
 <!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
 		 <p >Yunwei Bai, Bill Cai, Ying Kiat Tan, Zangwei Zheng, <strong>Shiming Chen</strong>, Tsuhan Chen.</p>
-       <p style="margin-top: -11px"><i>ACM Multimedia (<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>ACM International Conference on Multimedia(<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
