--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ var _hmt = _hmt || [];
 <!--     <div style="margin-top: 15px; overflow-y: scroll;"> -->
       <div style="height: 320px; overflow: auto;">
       <ul>
+       <li><span style="color:Red">2024.08</span>, Our paper on representation learning is accepted to <strong><i>IEEE TCSVT</i></strong>, congrating to Qinlei</li>
        <li><span style="color:Red">2024.08</span>, Our paper on domain generalization is accepted to <strong><i>IEEE TMM</i></strong>, congrating to Guanglin.</li>
       <li><span style="color:Red">2024.07</span>, Our TWO papers on zero/few-shot learning is accepted to <strong><i>ACM MM'24</i></strong>, congrating to Shuhuang and Yunwei.</li>
       <li><span style="color:Red">2024.05</span>, Our paper on few-shot object detection is accepted to <strong><i>IEEE TIP</i></strong>, congrating to Zhimeng.</li>
