--- a/index.html
+++ b/index.html
@@ -501,9 +501,8 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/2024-SCIS.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
-			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
-				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]</strong>
+		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Rethinking attribute localization for zero-shot learning.</a>
+			<strong>[<a href="https://link.springer.com/article/10.1007/s11432-023-4051-9">PDF</a>]</strong>
 				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
 			<br>
 		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
