--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ var _hmt = _hmt || [];
 		<img src="img/mm24-zsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> Causal Visual-semantic Correlation for Zero-shot Learning.</a>
-<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong>
 		 <p >Shuhuang Chen, Dingjie Fu, <strong>Shiming Chen</strong>, Shuo Ye, Wenjin Hou, Xinge You.</p>
        <p style="margin-top: -11px"><i>ACM International Conference on Multimedia(<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
@@ -430,7 +430,7 @@ var _hmt = _hmt || [];
 		<img src="img/mm24-fsl.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> FSL-QuickBoost: Minimal-Cost Ensemble for Few-Shot Learning.</a>
-<!-- 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> -->
+ 			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong> 
 		 <p >Yunwei Bai, Bill Cai, Ying Kiat Tan, Zangwei Zheng, <strong>Shiming Chen</strong>, Tsuhan Chen.</p>
        <p style="margin-top: -11px"><i>ACM International Conference on Multimedia(<strong> ACM MM </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
