--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@ var _hmt = _hmt || [];
 		<img src="img/cvpr24-zslvit.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> Progressive Semantic-Guided Vision Transformer for  Zero-Shot Learning.</a>
-			<strong>[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]</strong>
+			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2024/html/Chen_Progressive_Semantic-Guided_Vision_Transformer_for_Zero-Shot_Learning_CVPR_2024_paper.html">PDF</a>]
+				[<a href="https://arxiv.org/abs/2404.07713">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/ZSLViT">Code</a>]
+			</strong>
 		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Salman Khan, Fahad Shahbaz Khan.</p>
        <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
@@ -301,7 +304,10 @@ var _hmt = _hmt || [];
 		<img src="img/cvpr24-vads.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="" target="_blank"> Visual-Augmented Dynamic Semantic Prototype for Generative Zero-Shot Learning.</a>
-			<strong>[<a href="https://arxiv.org/pdf/2404.14808">arXiv</a>]</strong>
+			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Hou_Visual-Augmented_Dynamic_Semantic_Prototype_for_Generative_Zero-Shot_Learning_CVPR_2024_paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/pdf/2404.14808">arXiv</a>]
+				[<a href="https://github.com/Houwenjin/VADS">Code</a>]
+			</strong>
 		 <p >Wenjin Hou, <strong>Shiming Chen<sup>#</sup></strong>, Shuhuang Chen, Ziming Hong, Yan Wang, Xuetao Feng, Salman Khan, Fahad Shahbaz Khan, Xinge You.</p>
        <p style="margin-top: -11px"><i>IEEE Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2024. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
@@ -315,8 +321,9 @@ var _hmt = _hmt || [];
 		<img src="img/ICML23-DSP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://proceedings.mlr.press/v202/chen23l.html" target="_blank"> Evolving Semantic Prototype Improves Generative Zero-Shot Learning.</a>
-			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]</strong>
+			<strong>[<a href="https://proceedings.mlr.press/v202/chen23l/chen23l.pdf">PDF</a>]
 				[<a href="https://arxiv.org/pdf/2306.06931.pdf">arXiv</a>]
+			</strong>
 		 <p ><strong>Shiming Chen</strong>, Wenjin Hou, Ziming Hong, Xiaohan Ding, Yibing Song, Xinge You, Tongliang Liu, Kun Zhang.</p>
        <p style="margin-top: -11px"><i>The Fortieth International Conference on Machine Learning (<strong> ICML </strong>), 2023. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong> </i></p>
 		</td>
@@ -402,7 +409,10 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
+		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a>
+			<strong>[<a href="https://www.ijcai.org/proceedings/2022/0134.pdf">PDF</a>]
+				[<a href="https://github.com/HHHZM/SC-EGG">Code</a>]
+			</strong>
 		<p >Ziming Hong*, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You</p>
 	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF Rank-A</span>)</strong>
 		</td>
@@ -468,8 +478,9 @@ var _hmt = _hmt || [];
 		<td><a href="https://ieeexplore.ieee.org/document/9987664" target="_blank">TransZero++: Cross Attribute-guided Transformer for Zero-Shot Learning.</a>
 		 <strong>
 		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>]
-		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
 		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
+		[<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
+		[<a href="https://github.com/shiming-chen/TransZero_pp">Code</a>]
 		 </strong>
 		<br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Wenjin Hou, Guo-Sen Xie,  Yibing Song, Jian Zhao, Xinge You, Shuicheng Yan, Ling Shao.</p>
@@ -484,8 +495,9 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/2024-TIP.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">ECEA: Extensible Co-Existing Attention for Few-Shot Object Detection.</a>
+		<td><a href="https://ieeexplore.ieee.org/document/10558758" target="_blank">ECEA: Extensible Co-Existing Attention for Few-Shot Object Detection.</a>
   		 <strong>
+		[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10558758">PDF</a>]
 		[<a href="https://arxiv.org/pdf/2309.08196">arXiv</a>]
 		 </strong>
 		<br>
@@ -503,7 +515,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Rethinking attribute localization for zero-shot learning.</a>
 			<strong>[<a href="https://link.springer.com/article/10.1007/s11432-023-4051-9">PDF</a>]</strong>
-				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
+			</strong>    
 			<br>
 		<p >Shuhuang Chen, <strong>Shiming Chen<sup>#</sup></strong>, Guo-sen Xie, Xiangbo Shu, Xinge You, Xuelong Li.</p>
 	       <p style="margin-top: -11px"><i>SCIENCE CHINA Information Sciences, 67, 172103 (2024). <strong> 
@@ -520,8 +532,9 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://ieeexplore.ieee.org/document/10225587" target="_blank">EGANS: Evolutionary Generative Adversarial Network Search for Zero-Shot Learning.</a>
 		<strong>[<a href="https://ieeexplore.ieee.org/document/10225587">PDF</a>]
-		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]</strong>
-                 <br>
+		 [<a href="https://arxiv.org/abs/2308.09915">arXiv</a>]
+		[<a href="https://github.com/shiming-chen/EGANS">Code</a>]
+		</strong>
 		<p ><strong>Shiming Chen</strong>, Shuhuang Chen, Wenjin Hou,Weiping Ding, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 28(3):582-596, 2024. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
@@ -536,8 +549,10 @@ var _hmt = _hmt || [];
 		<img src="img/GNDAN.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="https://ieeexplore.ieee.org/document/9768177" target="_blank">GNDAN: Graph Navigated Dual Attention Network for Zero-Shot Learning.</a>
-			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
-				[<a href="">PDF</a>]</strong><br>
+			<strong>
+				[<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9768177">PDF</a>]
+				[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
+			</strong>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-Sen Xie, Xinge You, Weiping Ding and Ling Shao.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), 35(4):4516-4529, 2024. <strong>
 		 (<span style="color:Burlywood">SCI, IF=14.255, CCF Rank-B</span>)</strong></p>
@@ -553,9 +568,9 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a>
 		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
-		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]</strong>
-		 <!--[<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong>-->
-                 <br>
+		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]
+		[<a href="https://github.com/shiming-chen/CDE-GAN">Code</a>]
+		</strong>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEC </strong>), 25:986-1000, 2021. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=14.3, CCF Rank-B</span>)</strong></p>
