--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ var _hmt = _hmt || [];
 		 </strong>
 		<br>
 		<p >Zhimeng Xin, Tianxu Wu, <strong>Shiming Chen<sup>#</sup></strong>, Yixiong Zou, Ling Shao, Xinge You.</p>
-	 <p style="margin-top: -11px"> <i>IEEE Transactions on Image Processing (<strong> TIP </strong>), in press, 2024. <strong>
+	 <p style="margin-top: -11px"> <i>IEEE Transactions on Image Processing (<strong> TIP </strong>), 33:5564-5576, 2024. <strong>
 		 (<span style="color:Burlywood">SCI, IF=10.6, CCF Rank-A</span>)</strong></p>
 		</td>
 	</tr>
