--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ var _hmt = _hmt || [];
 			<strong>[<a href="https://www.sciencedirect.com/science/article/pii/S156625352400085X">PDF</a>]
 				[<a href="https://arxiv.org/pdf/2404.04799.pdf">arXiv</a>]</strong>
 		 <p >Zhimeng Xin, <strong>Shiming Chen</strong>, Tianxu Wu, Yuanjie Shao, Weiping Ding, Xinge You.</p>
-       <p style="margin-top: -11px"><i>Information Fusion, 2024. <strong>(<span style="color:Burlywood">SCI, IF=18.6</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Information Fusion, 108, 102307 (2024). <strong>(<span style="color:Burlywood">SCI, IF=18.6</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
